Replaced all checks for model access. Simple replace the entire model for each update appears to have no real effect on the performance and makes it completely thread/CME-safe